--- a/Tarea6/Tarea_6.ipynb
+++ b/Tarea6/Tarea_6.ipynb
@@ -9,7 +9,7 @@
         "# Tarea 6 - \n",
         "### Jose Adrian Castillo Sierra - 1664207\n",
         "### Luis Enrique López Nerio 1487280\n",
-        "### Gloria Samantha Servin Garcia  1731703"
+        "### Gloria Samanta Servin Garcia  1731703"
       ],
       "id": "93505282"
     },
